tests/baselines/reference/moduleAugmentationDisallowedExtensions.errors.txt
x.ts(17,5): error TS2667: Imports are not permitted in module augmentations. Consider moving them to the enclosing external module.
x.ts(17,26): error TS2307: Cannot find module './x0' or its corresponding type declarations.
x.ts(18,5): error TS2667: Imports are not permitted in module augmentations. Consider moving them to the enclosing external module.
x.ts(18,21): error TS2307: Cannot find module './x0' or its corresponding type declarations.
x.ts(19,5): error TS2666: Exports and export assignments are not permitted in module augmentations.
x.ts(19,19): error TS2307: Cannot find module './x0' or its corresponding type declarations.
x.ts(20,5): error TS2666: Exports and export assignments are not permitted in module augmentations.
x.ts(20,21): error TS2307: Cannot find module './x0' or its corresponding type declarations.
x.ts(24,5): error TS2666: Exports and export assignments are not permitted in module augmentations.


==== x0.ts (0 errors) ====
    export let a = 1;
    
==== x.ts (9 errors) ====
    namespace N1 {
        export let x = 1;
    }
    
    declare module "./observable" {
        var x: number;
        let y: number;
        const z: number;
        let {x1, y1, z0: {n}, z1: {arr: [el1, el2, el3]}}: {x1: number, y1: string, z0: {n: number}, z1: {arr: number[]} }
        interface A { x }
        namespace N {
            export class C {}
        }
        class Cls {}
        function foo(): number;
        type T = number;
        import * as all from "./x0";
        ~~~~~~
!!! error TS2667: Imports are not permitted in module augmentations. Consider moving them to the enclosing external module.
                             ~~~~~~
!!! error TS2307: Cannot find module './x0' or its corresponding type declarations.
        import {a} from "./x0";
        ~~~~~~
!!! error TS2667: Imports are not permitted in module augmentations. Consider moving them to the enclosing external module.
                        ~~~~~~
!!! error TS2307: Cannot find module './x0' or its corresponding type declarations.
        export * from "./x0";
        ~~~~~~
!!! error TS2666: Exports and export assignments are not permitted in module augmentations.
                      ~~~~~~
!!! error TS2307: Cannot find module './x0' or its corresponding type declarations.
        export {a} from "./x0";
        ~~~~~~
!!! error TS2666: Exports and export assignments are not permitted in module augmentations.
                        ~~~~~~
!!! error TS2307: Cannot find module './x0' or its corresponding type declarations.
    }
    
    declare module "./test" {
        export = N1;
        ~~~~~~
!!! error TS2666: Exports and export assignments are not permitted in module augmentations.
    }
    export {}
    
==== observable.ts (0 errors) ====
    export declare class Observable<T> {
        filter(pred: (e:T) => boolean): Observable<T>;
    }
    export var x = 1;
    
==== test.ts (0 errors) ====
    export let b = 1;
    
==== main.ts (0 errors) ====
    import { Observable } from "./observable"
    import "./x";
    